--- a/AI_Powered_Multilingual_Legal_Text_Classification_System.ipynb
+++ b/AI_Powered_Multilingual_Legal_Text_Classification_System.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/abhinavsathi/AI-Powered-Multilingual-Legal-Text-Classification-System/blob/main/AI_Powered_Multilingual_Legal_Text_Classification_System.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -705,7 +715,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOWPnuoWxvF34OTov9iu8U0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
